# DBManager-cpp

./: .gitignore
doc/: outline.md
exa/read_file/: TestData,0001_0001.sql  TestData,0001_0002.sql  main.cpp  test
exa/sql_c/: CMakeLists.txt  exa.login.h  login.h  main.cpp
sql/: db_admin.sql  dbm-setup.sql
src/: db_sql.h
